Authorization Tokens added.

--- a/AuthService.Domain/AuthService.Domain.csproj
+++ b/AuthService.Domain/AuthService.Domain.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="5.6.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Core.Domain\Core.Domain.csproj" />
+    <ProjectReference Include="..\Core.Intrastructure\Core.Intrastructure.csproj" />
   </ItemGroup>
 
 </Project>
