JWT Token generator service. Authorization added to CustomerService.

--- a/AuthService.Domain/AuthService.Domain.csproj
+++ b/AuthService.Domain/AuthService.Domain.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Core.Domain\Core.Domain.csproj" />
     <ProjectReference Include="..\Core.Intrastructure\Core.Intrastructure.csproj" />
+    <ProjectReference Include="..\CustomerService.Domain\CustomerService.Domain.csproj" />
   </ItemGroup>
 
 </Project>
