Loadbalancing YARP added.

--- a/GatewayService.Api/appsettings.json
+++ b/GatewayService.Api/appsettings.json
@@ -6,12 +6,59 @@
     }
   },
   "AllowedHosts": "*",
+
   "ReverseProxy": {
+
     "Routes": {
 
+      "customers-route": {
+        "ClusterId": "customers-cluster",
+        "Match": {
+          "Path": "/api/customers/{**catch-all}"
+        },
+        "Transforms": [
+          {
+            "RequestHeader": "ClientType",
+            "Set": "mobile"
+          },
+          {
+            "ResponseTrailer": "Version",
+            "Set": "v1",
+            "When": "Always"
+          },
+          {
+            "PathRemovePrefix": "/api"
+          }
+
+        ]
+      },
+      "products-route": {
+        "ClusterId": "products-cluster",
+        "Match": {
+          "Path": "/api/products/{**catch-all}"
+        }
+      }
     },
     "Clusters": {
 
+      "customers-cluster": {
+        "Destinations": {
+          "customers-cluster/destination1": {
+            "Address": "http://localhost:5100"
+          }
+        }
+      },
+
+      "products-cluster": {
+        "Destinations": {
+          "customers-cluster/destination1": {
+            "Address": "http://localhost:5010"
+          },
+          "customers-cluster/destination2": {
+            "Address": "http://localhost:5012"
+          }
+        }
+      }
     }
   }
 }
