Healthchecking and managing for YARP added.

--- a/GatewayService.Api/appsettings.json
+++ b/GatewayService.Api/appsettings.json
@@ -50,12 +50,29 @@
       },
 
       "products-cluster": {
+        "LoadBalancingPolicy": "PowerOfTwoChoices",
+
+        "HealthCheck": {
+          "Active": {
+            "Enabled": "true",
+            "Interval": "00:00:10",
+            "Timeout": "00:00:01",
+            "Policy": "ConsecutiveFailures",
+            "Path": "/health"
+          }
+        },
+        "Metadata": {
+          "ConsecutiveFailuresHealthPolicy.Threshold": "3"
+        },
+
         "Destinations": {
           "customers-cluster/destination1": {
-            "Address": "http://localhost:5010"
+            "Address": "http://localhost:5010",
+            "Health": "http://localhost:5010"
           },
           "customers-cluster/destination2": {
-            "Address": "http://localhost:5012"
+            "Address": "http://localhost:5012",
+            "Health": "http://localhost:5012"
           }
         }
       }
