--- a/ProductService.Api/appsettings.json
+++ b/ProductService.Api/appsettings.json
@@ -6,6 +6,14 @@
     }
   },
   "AllowedHosts": "*",
+  "instance": "A",
+
+  "NBPApi": {
+    "Url": "https://api.nbp.pl",
+    "Table": "A",
+    "Timeout": "00:15:00",
+    "Format": "json"
+  },
 
   "HealthChecksUI": {
     "HealthChecks": [
